bk_ida/gccida/g3/sched_analyze_2
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/sched_analyze_2/src/sched-deps.c:1169:24: error: unknown type name 'deps_0'
void  sched_analyze_2( deps_0 *deps, rtx x, rtx insn) 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/sched_analyze_2/src/sched-deps.c:1173:1: error: must use 'enum' tag to refer to type 'reg_note'
reg_note v7; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/sched_analyze_2/src/sched-deps.c:1188:4: error: expected ';' after expression
rtx v22; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/sched_analyze_2/src/sched-deps.c:1188:5: error: use of undeclared identifier 'v22'
rtx v22; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/sched_analyze_2/src/sched-deps.c:1189:4: error: expected ';' after expression
rtx pending_read_insns; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/sched_analyze_2/src/sched-deps.c:1189:5: error: use of undeclared identifier 'pending_read_insns'; did you mean 'pending_write_insns'?
rtx pending_read_insns; // rbx 
    ^~~~~~~~~~~~~~~~~~
    pending_write_insns
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/sched_analyze_2/src/sched-deps.c:1174:5: note: 'pending_write_insns' declared here
rtx pending_write_insns; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/sched_analyze_2/src/sched-deps.c:1190:4: error: expected ';' after expression
rtx pending_read_mems; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/sched_analyze_2/src/sched-deps.c:1190:5: error: use of undeclared identifier 'pending_read_mems'
rtx pending_read_mems; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/sched_analyze_2/src/sched-deps.c:1191:4: error: expected ';' after expression
rtx v25; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/sched_analyze_2/src/sched-deps.c:1191:5: error: use of undeclared identifier 'v25'
rtx v25; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/sched_analyze_2/src/sched-deps.c:1192:4: error: expected ';' after expression
rtx i; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/sched_analyze_2/src/sched-deps.c:1192:5: error: use of undeclared identifier 'i'
rtx i; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/sched_analyze_2/src/sched-deps.c:1193:4: error: expected ';' after expression
rtx v27; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/sched_analyze_2/src/sched-deps.c:1193:5: error: use of undeclared identifier 'v27'
rtx v27; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/sched_analyze_2/src/sched-deps.c:1197:4: error: expected ';' after expression
rtx v31; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/sched_analyze_2/src/sched-deps.c:1197:5: error: use of undeclared identifier 'v31'
rtx v31; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/sched_analyze_2/src/sched-deps.c:1200:4: error: expected ';' after expression
rtx v34; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/sched_analyze_2/src/sched-deps.c:1200:5: error: use of undeclared identifier 'v34'
rtx v34; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/sched_analyze_2/src/sched-deps.c:1207:4: error: expected ';' after expression
rtx v41; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/sched_analyze_2/src/obj/sched-deps.o] Error 1
